fixed horizontal scroll issue

--- a/style.css
+++ b/style.css
@@ -15,12 +15,18 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  max-width: 100vw;
+  max-width: 100%;
+  overflow-x: hidden;
  /* scroll-behavior: smooth; */
  }
 
-nav {
+ header {
   height: 80px;
+  overflow-y: hidden;
+ }
+
+nav {
+  height: 100%;
   width: 100vw;
   display: flex;
   align-items: center;
